--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby": "next",
     "gatsby-plugin-favicon": "^3.1.5",
     "gatsby-plugin-google-analytics": "next",
+    "gatsby-plugin-mailchimp": "^4.0.0",
     "gatsby-plugin-manifest": "next",
     "gatsby-plugin-nprogress": "next",
     "gatsby-plugin-offline": "next",
