--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "format": "prettier-eslint --write \"src/**/*.{js,jsx,json,css,md}\""
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.3.12",
+    "apollo-client": "^2.4.8",
+    "apollo-link-context": "^1.0.12",
+    "apollo-link-http": "^1.5.9",
     "gatsby": "next",
     "gatsby-plugin-favicon": "^3.1.5",
     "gatsby-plugin-google-analytics": "next",
@@ -32,6 +36,7 @@
     "gatsby-plugin-sharp": "next",
     "gatsby-plugin-styled-components": "next",
     "gatsby-transformer-sharp": "next",
+    "graphql-tag": "^2.10.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
