--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gatsby-plugin-styled-components": "next",
     "gatsby-transformer-sharp": "next",
     "graphql-tag": "^2.10.0",
+    "isomorphic-unfetch": "^3.0.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
