--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
-    "styled-components": "^3.4.5"
+    "styled-components": "^3.4.5",
+    "yup": "^0.26.6"
   },
   "devDependencies": {
     "babel-eslint": "8",
