--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "format": "prettier-eslint --write \"src/**/*.{js,jsx,json,css,md}\""
   },
   "dependencies": {
+    "alertify.js": "^1.0.12",
     "apollo-cache-inmemory": "^1.3.12",
     "apollo-client": "^2.4.8",
     "apollo-link-context": "^1.0.12",
