--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "format": "prettier-eslint --write \"src/**/*.{js,jsx,json,css,md}\""
   },
   "dependencies": {
-    "alertify.js": "^1.0.12",
     "apollo-cache-inmemory": "^1.3.12",
     "apollo-client": "^2.4.8",
     "apollo-link-context": "^1.0.12",
@@ -44,6 +43,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
+    "react-markdown": "^4.0.6",
     "styled-components": "^3.4.5",
     "sweetalert": "^2.1.2",
     "yup": "^0.26.6"
