--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
     "react-markdown": "^4.0.6",
+    "react-text-loop": "^2.0.1",
     "styled-components": "^3.4.5",
     "sweetalert": "^2.1.2",
     "yup": "^0.26.6"
