--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
+    "react-loading": "^2.0.3",
     "react-markdown": "^4.0.6",
     "react-text-loop": "^2.0.1",
     "styled-components": "^3.4.5",
